refactor, but not work

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
       <item>
        <layout class="QGridLayout" name="gridLayout_3">
         <item row="0" column="1">
-         <widget class="QSpinBox" name="highScreen">
+         <widget class="QSpinBox" name="heightScreen">
           <property name="maximum">
            <number>4096</number>
           </property>
