--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,6 +92,9 @@
         </item>
         <item row="1" column="1">
          <widget class="QSpinBox" name="sizeEl">
+          <property name="minimum">
+           <number>1</number>
+          </property>
           <property name="maximum">
            <number>4096</number>
           </property>
